# cubetrain

./: .gitignore  Cargo.toml  README.md  docker-compose-nginx.yml  docker-compose.yml  index.html
aws/templates/: acm-certificate.yaml  cloudfront-site.yaml  main.yaml  s3-bucket.yaml
drawio/: dev-structure.drawio
nginx/: nginx-static.conf  nginx.conf
sample/: history_sample.txt
scripts/: awsdeploy.sh  setenv  setenv_sample
src/: cube.rs  cubeset.rs  cubic_calc.rs  draw_manager.rs  lib.rs  main.rs
vue/: Dockerfile-vue
vue/cubetrain/: .gitignore  README.md  babel.config.js  build.sh  package.json  vue.config.js
vue/cubetrain/public/: index.html
vue/cubetrain/src/: App.vue  main.ts  vue3mq.d.ts
vue/cubetrain/src/__tests__/: AppTest.ts
vue/cubetrain/src/class/: cubeutils.ts  rotateStepManager.ts  types.ts
vue/cubetrain/src/components/: ControlPanel.vue  RotationPanel.vue  WasmScreen.vue
vue/cubetrain/src/components/__tests__/: ControlPanelTest.spec.ts  ControlPanelTest.ts  WasmScreenTest.spec.ts  WasmScreenTest.ts
wasm/: .gitignore  Cargo.toml  base.css  build.sh  index.html
wasm/src/: cubeset.rs  cubic_calc.rs  draw_manager.rs  lib.rs
